SD-2004-02-24-0: Cleanup:   man page updates, automatic user documentation
                 Issue:     636

AD-2004-02-24-1: Bugfix:    Did fix NULL pointer assignment.
                 Changed:   qstat
                 Issue:     696

MD-2004-02-24-0: Bugfix:    changed messages
                 Issue:     #676
                 Changed:   inst_sgeee

AD-2004-02-24-0: Bugfix:    Did fix CULL run time type error.
                 Changed:   qmaster
                 Issue:     699

AH-2004-02-23-2: Bugfix:    Improved diagnosis output of drmaa_init()
                            in case $SGE_ROOT is not set

AH-2004-02-23-1: Bugfix:    Added ":" to DRMAA example.c output path.
                            Improved example.c diagnosis capabilities.

AD-2004-02-23-0: Bugfix:    Did add missing calendar event handler.
                 Changed:   qmaster

AA-2004-02-23-0: Enhancem.: qmon CQ dialog, sensitivity toggling, lock icons
                 Changed:   qmon

AH-2004-02-23-0: Bugfix:    Fix broken reservation for parallel jobs.
                            Refresh CE_doubleval in JB_hard_resource_list
                            after qmaster restart.
                            Fix broken category optimization.
                            Fix problem with handling default requests.
                 Issue:     700

AA-2004-02-21-0: Enhancem.: qmon CQ changes and fixes
                            partial fix of bool, lBool casting
                            RR dialogue changes
                            fixing of broken functionalities (Save settings)
                            
                 Changed:   all due to lib dependencies

JG-2004-02-20-1: Enhancem.: Added some documenation related to reporting, 
                            cleanup of man page bootstrap.5.
                 Testsuite: Fixed some problems with tests
                            functional/accounting and bugs/issuezilla/440.

AS-2004-02-20-1: Cleanup    aimk cleanup, makefile cleanup, porting